CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(POLICY CMP0022)
  CMAKE_POLICY(SET CMP0022 NEW)
ENDIF(POLICY CMP0022)
IF(POLICY CMP0023)
  CMAKE_POLICY(SET CMP0023 OLD)
ENDIF(POLICY CMP0023)

PROJECT(qtwrapper)

MESSAGE("Compiling with qtwrapper")

SET(ENABLE_LIBWRAP true)
ADD_DEFINITIONS(-DENABLE_LIBWRAP=true)
ADD_DEFINITIONS("-std=c++0x")

SET(LOCAL_CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../../cmake/)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${LOCAL_CMAKE_MODULE_PATH})

IF (${MUTE_DRING} MATCHES true)
   #It makes clients debugging easier
   MESSAGE("Dring logs are disabled")
   ADD_DEFINITIONS(-DMUTE_DRING=true)
ENDIF()

FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Ring REQUIRED)

SET(CMAKE_AUTOMOC TRUE)

SET(libqtwrapper_LIB_SRCS
   instancemanager.cpp
   videomanager_wrap.cpp
)

SET(libqtwrapper_LIB_SRCS
   ${libqtwrapper_LIB_SRCS}
   callmanager_wrap.h
   configurationmanager_wrap.h
   instancemanager_wrap.h
   presencemanager_wrap.h
   videomanager_wrap.h
)

QT5_WRAP_CPP(LIB_WRAPPER_HEADER_MOC ${libqtwrapper_LIB_SRCS})

IF(NOT (${ENABLE_VIDEO} MATCHES "false"))
   MESSAGE("VIDEO enabled")
   ADD_DEFINITIONS(-DENABLE_VIDEO=true)
   SET(ENABLE_VIDEO 1 CACHE BOOLEAN "Enable video")
ENDIF(NOT (${ENABLE_VIDEO} MATCHES "false"))

INCLUDE_DIRECTORIES(SYSTEM ${Qt5Core_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${ring_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../dbus)

ADD_LIBRARY( qtwrapper STATIC ${libqtwrapper_LIB_SRCS} ${LIB_WRAPPER_HEADER_MOC})


IF(NOT ${ring_BIN} MATCHES "ring_BIN-NOTFOUND")
   TARGET_LINK_LIBRARIES( qtwrapper
      Qt5::Core
   -L/usr/lib64/libQt5Core.so.5.7.1
           ${QT_QTCORE_LIBRARY}
      ${ring_BIN}
   )
ENDIF()
